2020-07-23  David Byers  <david.byers@liu.se>

	Fix issue #1 (olc-recover-compound fails on full codes):
	* test/olctest.el: Improved test macros. Tests for issue 1.

	* olc.el (general): Whitespace fixes.
	(olc-recover-error): New error.
	(olc-recover-compound): New argument list. Type checks. Handle
	full codes being passed.

2020-07-22  David Byers  <david.byers@liu.se>

	Fix test cases:
	* test/olctest.el: Use keyword args in test cases. Replace
	interactive-only functions with better ones. Implement testing for
	batch mode.

	Clean up for melpa:
	* olc.el (olc-encode): Use #' instead of ' in apply. Enable
	lexical binding. Rename unused loop variable so it is ignored by
	the byte compiler.
	* olc.el (olc-shorten-compound): Use #' instead of ' in request.
	* olc.el (olc-recover-compound): Use #' instead of ' in request.
	* Makefile: New file.

	Rename some functions:
	* olc.el (olc-shorten-compound): Renamed from olc-shorten-geo to
	better match Google's terminology in their plus codes api.
	(olc-recover-compound): Same.

	Implement olc-shorten-geo and clean up:
	* olc.el (olc-shorten-geo): New function.
	(olc-encode): Use cl-defun and keyword args.
	(olc-shorten): Use cl-defun and keyword args.
	(olc-recover): Use cl-defun and keyword args.
	(olc-recover-geo): Use cl-defun and keyword args. Renamed from
	olc-recover-string.

	* olc.texi (Functions): Updated to match code changes.

2020-07-21  David Byers  <david.byers@liu.se>

	Clean up
	* olc.el: Declare external functions for the byte compiler. Fix
	whitespace. Shortened lines. Fixed some docstrings. Cleaned up
	comments. Removed DOS line endings. Moved functions around.

	More integer math:
	(olc-decode): Converted to use integer math.

	Wrote texinfo documentation:
	* olc.el (olc-parse-length): Removed.
	Updated documentation comment.
	(olc-decode): Updated docstring.
	(olc-encode): Updated docstring.
	(olc-recover): Updated docstring.
	(olc-shorten): Updated docstring.